--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "preinstall": "npm cache clean"
   },
   "dependencies": {
-    "babel-runtime": "^5.8.20"
+    "normalize.css": "^3.0.3",
+    "babel-runtime": "^5.8.20",
+    "react": "0.14.0-beta3",
+    "react-dom": "0.14.0-beta3",
+    "classnames": "^2.1.3"
   },
   "devDependencies": {
   },
