--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "classnames": "^2.1.3"
   },
   "devDependencies": {
+    "webpack": "^1.12.1",
+    "webpack-dev-server": "gsklee/webpack-dev-server"
   },
   "engines": {
     "iojs": ">=3.3.0"
