--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "normalize.css": "^3.0.3",
+
+    "babel": "^5.8.23",
     "babel-runtime": "^5.8.20",
+
     "react": "0.14.0-beta3",
     "react-dom": "0.14.0-beta3",
     "classnames": "^2.1.3"
