--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "classnames": "^2.1.3"
   },
   "devDependencies": {
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "gsklee/webpack-dev-server"
+    "webpack": "^1.12.1"
   },
   "engines": {
     "iojs": ">=3.3.0"
