--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "url": ""
   },
   "scripts": {
-    "init": "git flow init -d && npm install -g npm-check-updates && npm install",
-    "update": "rm -rf node_modules && ncu -u && npm install",
-    "preinstall": "npm cache clean"
+    "init": "./commands/init",
+    "update": "./commands/update",
+    "preinstall": "npm cache clean",
+    "precommit": "npm test",
+    "test": "./commands/test"
   },
   "dependencies": {
     "normalize.css": "^3.0.3",
@@ -23,7 +25,9 @@
     "classnames": "^2.1.3"
   },
   "devDependencies": {
-    "webpack": "^1.12.1"
+    "webpack": "^1.12.1",
+
+    "husky": "^0.10.1"
   },
   "engines": {
     "iojs": ">=3.3.0"
