--- a/package.toml
+++ b/package.toml
@@ -24,7 +24,7 @@ description = ""
   classnames = "^2.1.3"
 
   # CSS
-  normalize.css = "^3.0.3"
+  "normalize.css" = "^3.0.3"
 
 [devDependencies]
   # Webpack
