--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "./commands/test"
   },
   "dependencies": {
-    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
     "react": "0.14.0-beta3",
     "react-dom": "0.14.0-beta3",
     "classnames": "^2.1.3",
@@ -24,6 +24,14 @@
   "devDependencies": {
     "webpack": "^1.12.1",
     "babel-runtime": "^5.8.20",
+    "babel-loader": "^5.3.2",
+    "express": "^4.13.3",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0",
+    "babel-plugin-react-transform": "^1.0.3",
+    "react-transform-webpack-hmr": "^0.1.4",
+    "react-transform-catch-errors": "^0.1.1",
+    "redbox-react": "^1.0.3",
     "husky": "^0.10.1"
   },
   "engines": {
@@ -35,7 +43,20 @@
     "optional": [
       "runtime",
       "minification.constantFolding"
-    ]
+    ],
+    "plugins": [
+      "react-transform"
+    ],
+    "extra": {
+      "react-transform": [{
+        "target": "react-transform-webpack-hmr",
+        "imports": ["react"],
+        "locals": ["module"]
+      }, {
+        "target": "react-transform-catch-errors",
+        "imports": ["react", "redbox-react"]
+      }]
+    }
   },
   "semistandard": {
     "parser": "babel-eslint"
@@ -47,13 +68,15 @@
       "test": ["", "$ npm test"]
     },
     "dependencies": {
-      "babel": ["ECMAScript 2015+", "babel/polyfill"],
-      "react": ["React", ""],
-      "normalize.css": ["CSS", ""]
+      "babel-core": ["ECMAScript 2015+", "babel-core/polyfill"],
+      "react": ["React"],
+      "normalize.css": ["CSS"]
     },
     "devDependencies": {
-      "webpack": ["Webpack", ""],
-      "husky": ["Git Hooks", ""]
+      "webpack": ["Webpack"],
+      "express": ["Development Server"],
+      "babel-plugin-react-transform": ["Hot Reload"],
+      "husky": ["Git Hooks"]
     }
   }
 }
