Suppress experimental transformer warnings from Babel

--- a/package.toml
+++ b/package.toml
@@ -52,6 +52,7 @@ description = ""
 [babel]
   stage = 0
   loose = "all"
+  experimental = true
   optional = [
     "runtime",
     "minification.constantFolding"
