--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "babel": {
     "stage": 0,
     "loose": "all",
+    "experimental": true,
     "optional": [
       "runtime",
       "minification.constantFolding"
