Enable better local module resolution
Eliminate the clutter associated with importing from a deeply nested directory structure.

Reference:
https://gist.github.com/branneman/8048520

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preinstall": "npm cache clean",
     "precommit": "npm test",
     "test": "./commands/test",
-    "start": "node ./server/babel-hook.js"
+    "start": "./commands/start"
   },
   "dependencies": {
     "babel-core": "^5.8.23",
