--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babel-core": "^5.8.23",
+    "bound-native-methods": "^0.1.6",
     "react": "0.14.0-beta3",
     "react-dom": "0.14.0-beta3",
     "classnames": "^2.1.3",
