--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "start": "./commands/start"
   },
   "dependencies": {
-    "babel-core": "^5.8.23",
+    "babel-core": "^5.8.24",
     "bound-native-methods": "^0.1.6",
-    "react": "0.14.0-beta3",
-    "react-dom": "0.14.0-beta3",
+    "react": "0.14.0-rc1",
+    "react-dom": "0.14.0-rc1",
     "classnames": "^2.1.3",
     "normalize.css": "^3.0.3"
   },
