--- a/package.toml
+++ b/package.toml
@@ -17,12 +17,12 @@ description = ""
 
 [dependencies]
   # ECMAScript 2015+
-  babel-core = "^5.8.23" # babel-core/polyfill
+  babel-core = "^5.8.24" # babel-core/polyfill
   bound-native-methods = "^0.1.6"
 
   # React
-  react = "0.14.0-beta3"
-  react-dom = "0.14.0-beta3"
+  react = "0.14.0-rc1"
+  react-dom = "0.14.0-rc1"
   classnames = "^2.1.3"
 
   # CSS
@@ -49,7 +49,7 @@ description = ""
   husky = "^0.10.1"
 
 [engines]
-  iojs = ">=3.3.0"
+  node = ">=4.0.0"
 
 [babel]
   stage = 0
