--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "./commands/start"
   },
   "dependencies": {
-    "babel-core": "^5.8.24",
+    "babel-core": "^5.8.25",
     "bound-native-methods": "^0.1.6",
     "react": "0.14.0-rc1",
     "react-dom": "0.14.0-rc1",
@@ -24,16 +24,16 @@
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
-    "webpack": "^1.12.1",
+    "webpack": "^1.12.2",
     "babel-runtime": "^5.8.24",
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.1.0",
-    "babel-plugin-react-transform": "^1.0.3",
-    "react-transform-webpack-hmr": "^0.1.4",
-    "react-transform-catch-errors": "^0.1.3",
-    "redbox-react": "^1.0.5",
+    "webpack-hot-middleware": "^2.2.0",
+    "babel-plugin-react-transform": "^1.0.5",
+    "react-transform-hmr": "^1.0.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "redbox-react": "^1.0.6",
     "husky": "^0.10.1"
   },
   "engines": {
@@ -52,7 +52,7 @@
     ],
     "extra": {
       "react-transform": [{
-        "target": "react-transform-webpack-hmr",
+        "target": "react-transform-hmr",
         "imports": ["react"],
         "locals": ["module"]
       }, {
