--- a/package.json
+++ b/package.json
@@ -18,22 +18,30 @@
   "dependencies": {
     "babel-core": "^5.8.25",
     "bound-native-methods": "^0.1.6",
+    "isomorphic-fetch": "^2.1.1",
     "react": "0.14.0-rc1",
     "react-dom": "0.14.0-rc1",
-    "classnames": "^2.1.3",
+    "classnames": "^2.1.5",
+    "redux": "^3.0.2",
+    "redux-actions": "^0.8.0",
+    "redux-thunk": "^1.0.0",
+    "redux-promise": "^0.5.0",
+    "react-redux": "^3.0.1",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
     "webpack": "^1.12.2",
-    "babel-runtime": "^5.8.24",
+    "babel-runtime": "^5.8.25",
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0",
-    "babel-plugin-react-transform": "^1.0.5",
-    "react-transform-hmr": "^1.0.0",
+    "webpack-hot-middleware": "^2.4.1",
+    "babel-plugin-react-transform": "^1.1.1",
+    "react-transform-hmr": "^1.0.1",
     "react-transform-catch-errors": "^1.0.0",
-    "redbox-react": "^1.0.6",
+    "redbox-react": "^1.1.1",
+    "redux-devtools": "^2.1.5",
+    "redux-logger": "^2.0.1",
     "husky": "^0.10.1"
   },
   "engines": {
@@ -74,12 +82,14 @@
     "dependencies": {
       "babel-core": ["ECMAScript 2015+", "babel-core/polyfill"],
       "react": ["React"],
+      "redux": ["Redux"],
       "normalize.css": ["CSS"]
     },
     "devDependencies": {
       "webpack": ["Webpack"],
       "express": ["Development Server"],
       "babel-plugin-react-transform": ["Hot Reload"],
+      "redux-devtools": ["DevTools"],
       "husky": ["Git Hooks"]
     }
   }
