--- a/package.toml
+++ b/package.toml
@@ -19,11 +19,19 @@ description = ""
   # ECMAScript 2015+
   babel-core = "^5.8.24" # babel-core/polyfill
   bound-native-methods = "^0.1.6"
+  isomorphic-fetch = "^2.1.1"
 
   # React
   react = "0.14.0-rc1"
   react-dom = "0.14.0-rc1"
   classnames = "^2.1.3"
+
+  # Redux
+  redux = "^3.0.0"
+  redux-actions = "^0.8.0"
+  redux-thunk = "^1.0.0"
+  redux-promise = "^0.5.0"
+  react-redux = "^2.1.2"
 
   # CSS
   "normalize.css" = "^3.0.3"
@@ -44,6 +52,10 @@ description = ""
   react-transform-hmr = "^0.1.4"
   react-transform-catch-errors = "^0.1.2"
   redbox-react = "^1.0.4"
+
+  # DevTools
+  redux-devtools = "^2.1.5"
+  redux-logger = "^1.0.9"
 
   # Git Hooks
   husky = "^0.10.1"
