--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "babel-core": "^5.8.25",
     "bound-native-methods": "^0.1.6",
     "isomorphic-fetch": "^2.1.1",
-    "react": "0.14.0-rc1",
-    "react-dom": "0.14.0-rc1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "classnames": "^2.1.5",
     "redux": "^3.0.2",
     "redux-actions": "^0.8.0",
@@ -41,7 +41,7 @@
     "react-transform-catch-errors": "^1.0.0",
     "redbox-react": "^1.1.1",
     "redux-devtools": "^2.1.5",
-    "redux-logger": "^2.0.1",
+    "redux-logger": "^2.0.3",
     "husky": "^0.10.1"
   },
   "engines": {
